--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
     }
 }
+
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.18.0"
-    id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
+    id "org.jlleitschuh.gradle.ktlint" version "10.2.0"
 }
 
 subprojects {
@@ -22,6 +23,11 @@ subprojects {
     ktlint {
         debug = false
     }
+}
+
+repositories {
+    // Required to download KtLint
+    mavenCentral()
 }
 
 detekt {
